// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renders components/popover/demo/arrow.tsx extend context correctly 1`] = `
Array [
  <div
    aria-label="segmented control"
    aria-orientation="horizontal"
    class="g-segmented css-var-test-id"
    role="radiogroup"
    style="margin-bottom: 24px;"
    tabindex="0"
  >
    <div
      class="g-segmented-group"
    >
      <label
        class="g-segmented-item g-segmented-item-selected"
      >
        <input
          checked=""
          class="g-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          class="g-segmented-item-label"
          title="Show"
        >
          Show
        </div>
      </label>
      <label
        class="g-segmented-item"
      >
        <input
          class="g-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          class="g-segmented-item-label"
          title="Hide"
        >
          Hide
        </div>
      </label>
      <label
        class="g-segmented-item"
      >
        <input
          class="g-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          class="g-segmented-item-label"
          title="Center"
        >
          Center
        </div>
      </label>
    </div>
  </div>,
  <div
    class="demo g-flex css-var-test-id g-flex-align-center g-flex-justify-center g-flex-vertical"
  >
    <div
      class="g-flex css-var-test-id g-flex-align-center g-flex-justify-center"
      style="white-space: nowrap;"
    >
      <button
        aria-describedby="test-id"
        class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
        style="width: 80px; margin: 4px;"
        type="button"
      >
        <span>
          TL
        </span>
      </button>
      <div
        class="g-popover g-zoom-big-appear g-zoom-big-appear-prepare g-zoom-big g-popover-css-var css-var-test-id css-var-test-id g-popover-placement-topLeft"
        style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
      >
        <div
          class="g-popover-arrow"
          style="position: absolute;"
        >
          <span
            class="g-popover-arrow-content"
          />
        </div>
        <div
          class="g-popover-container"
          id="test-id"
          role="tooltip"
        >
          <div
            class="g-popover-title"
          >
            <span>
              Title
            </span>
          </div>
          <div
            class="g-popover-content"
          >
            <div>
              <p>
                Content
              </p>
              <p>
                Content
              </p>
            </div>
          </div>
        </div>
      </div>
      <button
        aria-describedby="test-id"
        class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
        style="width: 80px; margin: 4px;"
        type="button"
      >
        <span>
          Top
        </span>
      </button>
      <div
        class="g-popover g-zoom-big-appear g-zoom-big-appear-prepare g-zoom-big g-popover-css-var css-var-test-id css-var-test-id g-popover-placement-top"
        style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
      >
        <div
          class="g-popover-arrow"
          style="position: absolute; bottom: 0px; left: 0px;"
        >
          <span
            class="g-popover-arrow-content"
          />
        </div>
        <div
          class="g-popover-container"
          id="test-id"
          role="tooltip"
        >
          <div
            class="g-popover-title"
          >
            <span>
              Title
            </span>
          </div>
          <div
            class="g-popover-content"
          >
            <div>
              <p>
                Content
              </p>
              <p>
                Content
              </p>
            </div>
          </div>
        </div>
      </div>
      <button
        aria-describedby="test-id"
        class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
        style="width: 80px; margin: 4px;"
        type="button"
      >
        <span>
          TR
        </span>
      </button>
      <div
        class="g-popover g-zoom-big-appear g-zoom-big-appear-prepare g-zoom-big g-popover-css-var css-var-test-id css-var-test-id g-popover-placement-topRight"
        style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
      >
        <div
          class="g-popover-arrow"
          style="position: absolute;"
        >
          <span
            class="g-popover-arrow-content"
          />
        </div>
        <div
          class="g-popover-container"
          id="test-id"
          role="tooltip"
        >
          <div
            class="g-popover-title"
          >
            <span>
              Title
            </span>
          </div>
          <div
            class="g-popover-content"
          >
            <div>
              <p>
                Content
              </p>
              <p>
                Content
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="g-flex css-var-test-id g-flex-align-center g-flex-justify-space-between"
      style="width: 432px;"
    >
      <div
        class="g-flex css-var-test-id g-flex-align-center g-flex-vertical"
      >
        <button
          aria-describedby="test-id"
          class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
          style="width: 80px; margin: 4px;"
          type="button"
        >
          <span>
            LT
          </span>
        </button>
        <div
          class="g-popover g-zoom-big-appear g-zoom-big-appear-prepare g-zoom-big g-popover-css-var css-var-test-id css-var-test-id g-popover-placement-leftTop"
          style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
        >
          <div
            class="g-popover-arrow"
            style="position: absolute;"
          >
            <span
              class="g-popover-arrow-content"
            />
          </div>
          <div
            class="g-popover-container"
            id="test-id"
            role="tooltip"
          >
            <div
              class="g-popover-title"
            >
              <span>
                Title
              </span>
            </div>
            <div
              class="g-popover-content"
            >
              <div>
                <p>
                  Content
                </p>
                <p>
                  Content
                </p>
              </div>
            </div>
          </div>
        </div>
        <button
          aria-describedby="test-id"
          class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
          style="width: 80px; margin: 4px;"
          type="button"
        >
          <span>
            Left
          </span>
        </button>
        <div
          class="g-popover g-zoom-big-appear g-zoom-big-appear-prepare g-zoom-big g-popover-css-var css-var-test-id css-var-test-id g-popover-placement-left"
          style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
        >
          <div
            class="g-popover-arrow"
            style="position: absolute; top: 0px; right: 0px;"
          >
            <span
              class="g-popover-arrow-content"
            />
          </div>
          <div
            class="g-popover-container"
            id="test-id"
            role="tooltip"
          >
            <div
              class="g-popover-title"
            >
              <span>
                Title
              </span>
            </div>
            <div
              class="g-popover-content"
            >
              <div>
                <p>
                  Content
                </p>
                <p>
                  Content
                </p>
              </div>
            </div>
          </div>
        </div>
        <button
          aria-describedby="test-id"
          class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
          style="width: 80px; margin: 4px;"
          type="button"
        >
          <span>
            LB
          </span>
        </button>
        <div
          class="g-popover g-zoom-big-appear g-zoom-big-appear-prepare g-zoom-big g-popover-css-var css-var-test-id css-var-test-id g-popover-placement-leftBottom"
          style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
        >
          <div
            class="g-popover-arrow"
            style="position: absolute;"
          >
            <span
              class="g-popover-arrow-content"
            />
          </div>
          <div
            class="g-popover-container"
            id="test-id"
            role="tooltip"
          >
            <div
              class="g-popover-title"
            >
              <span>
                Title
              </span>
            </div>
            <div
              class="g-popover-content"
            >
              <div>
                <p>
                  Content
                </p>
                <p>
                  Content
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="g-flex css-var-test-id g-flex-align-center g-flex-vertical"
      >
        <button
          aria-describedby="test-id"
          class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
          style="width: 80px; margin: 4px;"
          type="button"
        >
          <span>
            RT
          </span>
        </button>
        <div
          class="g-popover g-zoom-big-appear g-zoom-big-appear-prepare g-zoom-big g-popover-css-var css-var-test-id css-var-test-id g-popover-placement-rightTop"
          style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
        >
          <div
            class="g-popover-arrow"
            style="position: absolute;"
          >
            <span
              class="g-popover-arrow-content"
            />
          </div>
          <div
            class="g-popover-container"
            id="test-id"
            role="tooltip"
          >
            <div
              class="g-popover-title"
            >
              <span>
                Title
              </span>
            </div>
            <div
              class="g-popover-content"
            >
              <div>
                <p>
                  Content
                </p>
                <p>
                  Content
                </p>
              </div>
            </div>
          </div>
        </div>
        <button
          aria-describedby="test-id"
          class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
          style="width: 80px; margin: 4px;"
          type="button"
        >
          <span>
            Right
          </span>
        </button>
        <div
          class="g-popover g-zoom-big-appear g-zoom-big-appear-prepare g-zoom-big g-popover-css-var css-var-test-id css-var-test-id g-popover-placement-right"
          style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
        >
          <div
            class="g-popover-arrow"
            style="position: absolute; top: 0px; left: 0px;"
          >
            <span
              class="g-popover-arrow-content"
            />
          </div>
          <div
            class="g-popover-container"
            id="test-id"
            role="tooltip"
          >
            <div
              class="g-popover-title"
            >
              <span>
                Title
              </span>
            </div>
            <div
              class="g-popover-content"
            >
              <div>
                <p>
                  Content
                </p>
                <p>
                  Content
                </p>
              </div>
            </div>
          </div>
        </div>
        <button
          aria-describedby="test-id"
          class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
          style="width: 80px; margin: 4px;"
          type="button"
        >
          <span>
            RB
          </span>
        </button>
        <div
          class="g-popover g-zoom-big-appear g-zoom-big-appear-prepare g-zoom-big g-popover-css-var css-var-test-id css-var-test-id g-popover-placement-rightBottom"
          style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
        >
          <div
            class="g-popover-arrow"
            style="position: absolute;"
          >
            <span
              class="g-popover-arrow-content"
            />
          </div>
          <div
            class="g-popover-container"
            id="test-id"
            role="tooltip"
          >
            <div
              class="g-popover-title"
            >
              <span>
                Title
              </span>
            </div>
            <div
              class="g-popover-content"
            >
              <div>
                <p>
                  Content
                </p>
                <p>
                  Content
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="g-flex css-var-test-id g-flex-align-center g-flex-justify-center"
      style="white-space: nowrap;"
    >
      <button
        aria-describedby="test-id"
        class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
        style="width: 80px; margin: 4px;"
        type="button"
      >
        <span>
          BL
        </span>
      </button>
      <div
        class="g-popover g-zoom-big-appear g-zoom-big-appear-prepare g-zoom-big g-popover-css-var css-var-test-id css-var-test-id g-popover-placement-bottomLeft"
        style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
      >
        <div
          class="g-popover-arrow"
          style="position: absolute;"
        >
          <span
            class="g-popover-arrow-content"
          />
        </div>
        <div
          class="g-popover-container"
          id="test-id"
          role="tooltip"
        >
          <div
            class="g-popover-title"
          >
            <span>
              Title
            </span>
          </div>
          <div
            class="g-popover-content"
          >
            <div>
              <p>
                Content
              </p>
              <p>
                Content
              </p>
            </div>
          </div>
        </div>
      </div>
      <button
        aria-describedby="test-id"
        class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
        style="width: 80px; margin: 4px;"
        type="button"
      >
        <span>
          Bottom
        </span>
      </button>
      <div
        class="g-popover g-zoom-big-appear g-zoom-big-appear-prepare g-zoom-big g-popover-css-var css-var-test-id css-var-test-id g-popover-placement-bottom"
        style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
      >
        <div
          class="g-popover-arrow"
          style="position: absolute; top: 0px; left: 0px;"
        >
          <span
            class="g-popover-arrow-content"
          />
        </div>
        <div
          class="g-popover-container"
          id="test-id"
          role="tooltip"
        >
          <div
            class="g-popover-title"
          >
            <span>
              Title
            </span>
          </div>
          <div
            class="g-popover-content"
          >
            <div>
              <p>
                Content
              </p>
              <p>
                Content
              </p>
            </div>
          </div>
        </div>
      </div>
      <button
        aria-describedby="test-id"
        class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
        style="width: 80px; margin: 4px;"
        type="button"
      >
        <span>
          BR
        </span>
      </button>
      <div
        class="g-popover g-zoom-big-appear g-zoom-big-appear-prepare g-zoom-big g-popover-css-var css-var-test-id css-var-test-id g-popover-placement-bottomRight"
        style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
      >
        <div
          class="g-popover-arrow"
          style="position: absolute;"
        >
          <span
            class="g-popover-arrow-content"
          />
        </div>
        <div
          class="g-popover-container"
          id="test-id"
          role="tooltip"
        >
          <div
            class="g-popover-title"
          >
            <span>
              Title
            </span>
          </div>
          <div
            class="g-popover-content"
          >
            <div>
              <p>
                Content
              </p>
              <p>
                Content
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`renders components/popover/demo/arrow.tsx extend context correctly 2`] = `[]`;

exports[`renders components/popover/demo/arrow-point-at-center.tsx extend context correctly 1`] = `
<div
  class="g-flex g-flex-wrap-wrap"
  style="gap: 16px;"
>
  <div
    class="acss-6kvo78"
  >
    <div
      class="acss-1nif5xu g-popover-open"
    />
    <div
      class="g-popover g-zoom-big-appear g-zoom-big-appear-prepare g-zoom-big g-popover-placement-topLeft"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box;"
    >
      <div
        class="g-popover-arrow"
        style="position: absolute;"
      />
      <div
        class="g-popover-content"
      >
        <div
          class="g-popover-inner"
          role="tooltip"
        >
          <div
            class="g-popover-inner-content"
          >
            <div
              class="g-flex g-flex-align-center g-flex-justify-center"
            >
              topLeft
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="acss-6kvo78"
  >
    <div
      class="acss-1nif5xu g-popover-open"
    />
    <div
      class="g-popover g-zoom-big-appear g-zoom-big-appear-prepare g-zoom-big g-popover-placement-top"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box;"
    >
      <div
        class="g-popover-arrow"
        style="position: absolute; bottom: 0px; left: 0px;"
      />
      <div
        class="g-popover-content"
      >
        <div
          class="g-popover-inner"
          role="tooltip"
        >
          <div
            class="g-popover-inner-content"
          >
            <div
              class="g-flex g-flex-align-center g-flex-justify-center"
            >
              top
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="acss-6kvo78"
  >
    <div
      class="acss-1nif5xu g-popover-open"
    />
    <div
      class="g-popover g-zoom-big-appear g-zoom-big-appear-prepare g-zoom-big g-popover-placement-topRight"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box;"
    >
      <div
        class="g-popover-arrow"
        style="position: absolute;"
      />
      <div
        class="g-popover-content"
      >
        <div
          class="g-popover-inner"
          role="tooltip"
        >
          <div
            class="g-popover-inner-content"
          >
            <div
              class="g-flex g-flex-align-center g-flex-justify-center"
            >
              topRight
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="acss-6kvo78"
  >
    <div
      class="acss-1nif5xu g-popover-open"
    />
    <div
      class="g-popover g-zoom-big-appear g-zoom-big-appear-prepare g-zoom-big g-popover-placement-leftTop"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box;"
    >
      <div
        class="g-popover-arrow"
        style="position: absolute;"
      />
      <div
        class="g-popover-content"
      >
        <div
          class="g-popover-inner"
          role="tooltip"
        >
          <div
            class="g-popover-inner-content"
          >
            <div
              class="g-flex g-flex-align-center g-flex-justify-center"
            >
              leftTop
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="acss-6kvo78"
  >
    <div
      class="acss-1nif5xu g-popover-open"
    />
    <div
      class="g-popover g-zoom-big-appear g-zoom-big-appear-prepare g-zoom-big g-popover-placement-left"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box;"
    >
      <div
        class="g-popover-arrow"
        style="position: absolute; top: 0px; right: 0px;"
      />
      <div
        class="g-popover-content"
      >
        <div
          class="g-popover-inner"
          role="tooltip"
        >
          <div
            class="g-popover-inner-content"
          >
            <div
              class="g-flex g-flex-align-center g-flex-justify-center"
            >
              left
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="acss-6kvo78"
  >
    <div
      class="acss-1nif5xu g-popover-open"
    />
    <div
      class="g-popover g-zoom-big-appear g-zoom-big-appear-prepare g-zoom-big g-popover-placement-leftBottom"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box;"
    >
      <div
        class="g-popover-arrow"
        style="position: absolute;"
      />
      <div
        class="g-popover-content"
      >
        <div
          class="g-popover-inner"
          role="tooltip"
        >
          <div
            class="g-popover-inner-content"
          >
            <div
              class="g-flex g-flex-align-center g-flex-justify-center"
            >
              leftBottom
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="acss-6kvo78"
  >
    <div
      class="acss-1nif5xu g-popover-open"
    />
    <div
      class="g-popover g-zoom-big-appear g-zoom-big-appear-prepare g-zoom-big g-popover-placement-rightTop"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box;"
    >
      <div
        class="g-popover-arrow"
        style="position: absolute;"
      />
      <div
        class="g-popover-content"
      >
        <div
          class="g-popover-inner"
          role="tooltip"
        >
          <div
            class="g-popover-inner-content"
          >
            <div
              class="g-flex g-flex-align-center g-flex-justify-center"
            >
              rightTop
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="acss-6kvo78"
  >
    <div
      class="acss-1nif5xu g-popover-open"
    />
    <div
      class="g-popover g-zoom-big-appear g-zoom-big-appear-prepare g-zoom-big g-popover-placement-right"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box;"
    >
      <div
        class="g-popover-arrow"
        style="position: absolute; top: 0px; left: 0px;"
      />
      <div
        class="g-popover-content"
      >
        <div
          class="g-popover-inner"
          role="tooltip"
        >
          <div
            class="g-popover-inner-content"
          >
            <div
              class="g-flex g-flex-align-center g-flex-justify-center"
            >
              right
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="acss-6kvo78"
  >
    <div
      class="acss-1nif5xu g-popover-open"
    />
    <div
      class="g-popover g-zoom-big-appear g-zoom-big-appear-prepare g-zoom-big g-popover-placement-rightBottom"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box;"
    >
      <div
        class="g-popover-arrow"
        style="position: absolute;"
      />
      <div
        class="g-popover-content"
      >
        <div
          class="g-popover-inner"
          role="tooltip"
        >
          <div
            class="g-popover-inner-content"
          >
            <div
              class="g-flex g-flex-align-center g-flex-justify-center"
            >
              rightBottom
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="acss-6kvo78"
  >
    <div
      class="acss-1nif5xu g-popover-open"
    />
    <div
      class="g-popover g-zoom-big-appear g-zoom-big-appear-prepare g-zoom-big g-popover-placement-bottomLeft"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box;"
    >
      <div
        class="g-popover-arrow"
        style="position: absolute;"
      />
      <div
        class="g-popover-content"
      >
        <div
          class="g-popover-inner"
          role="tooltip"
        >
          <div
            class="g-popover-inner-content"
          >
            <div
              class="g-flex g-flex-align-center g-flex-justify-center"
            >
              bottomLeft
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="acss-6kvo78"
  >
    <div
      class="acss-1nif5xu g-popover-open"
    />
    <div
      class="g-popover g-zoom-big-appear g-zoom-big-appear-prepare g-zoom-big g-popover-placement-bottom"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box;"
    >
      <div
        class="g-popover-arrow"
        style="position: absolute; top: 0px; left: 0px;"
      />
      <div
        class="g-popover-content"
      >
        <div
          class="g-popover-inner"
          role="tooltip"
        >
          <div
            class="g-popover-inner-content"
          >
            <div
              class="g-flex g-flex-align-center g-flex-justify-center"
            >
              bottom
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="acss-6kvo78"
  >
    <div
      class="acss-1nif5xu g-popover-open"
    />
    <div
      class="g-popover g-zoom-big-appear g-zoom-big-appear-prepare g-zoom-big g-popover-placement-bottomRight"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box;"
    >
      <div
        class="g-popover-arrow"
        style="position: absolute;"
      />
      <div
        class="g-popover-content"
      >
        <div
          class="g-popover-inner"
          role="tooltip"
        >
          <div
            class="g-popover-inner-content"
          >
            <div
              class="g-flex g-flex-align-center g-flex-justify-center"
            >
              bottomRight
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/popover/demo/arrow-point-at-center.tsx extend context correctly 2`] = `[]`;

exports[`renders components/popover/demo/basic.tsx extend context correctly 1`] = `
Array [
  <button
    aria-describedby="test-id"
    class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid"
    type="button"
  >
    <span>
      Hover me
    </span>
  </button>,
  <div
    class="g-popover g-zoom-big-appear g-zoom-big-appear-prepare g-zoom-big g-popover-css-var css-var-test-id css-var-test-id g-popover-placement-top"
    style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
  >
    <div
      class="g-popover-arrow"
      style="position: absolute; bottom: 0px; left: 0px;"
    >
      <span
        class="g-popover-arrow-content"
      />
    </div>
    <div
      class="g-popover-container"
      id="test-id"
      role="tooltip"
    >
      <div
        class="g-popover-title"
      >
        Title
      </div>
      <div
        class="g-popover-content"
      >
        <div>
          <p>
            Content
          </p>
          <p>
            Content
          </p>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`renders components/popover/demo/basic.tsx extend context correctly 2`] = `[]`;

exports[`renders components/popover/demo/component-token.tsx extend context correctly 1`] = `
Array [
  <div
    class="g-popover g-popover-pure g-popover-placement-top css-var-test-id"
  >
    <div
      class="g-popover-arrow"
    />
    <div
      class="g-popover-container"
      role="tooltip"
    >
      <div
        class="g-popover-title"
      >
        Title
      </div>
      <div
        class="g-popover-content"
      >
        <div>
          <p>
            Content
          </p>
          <p>
            Content
          </p>
        </div>
      </div>
    </div>
  </div>,
  <div
    class="g-popover g-popover-pure g-popover-placement-bottomLeft css-var-test-id"
    style="width: 250px;"
  >
    <div
      class="g-popover-arrow"
    />
    <div
      class="g-popover-container"
      role="tooltip"
      style="width: 250px;"
    >
      <div
        class="g-popover-title"
      >
        Title
      </div>
      <div
        class="g-popover-content"
      >
        <div>
          <p>
            Content
          </p>
          <p>
            Content
          </p>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`renders components/popover/demo/component-token.tsx extend context correctly 2`] = `[]`;

exports[`renders components/popover/demo/control.tsx extend context correctly 1`] = `
Array [
  <button
    aria-describedby="test-id"
    class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid"
    type="button"
  >
    <span>
      Click me
    </span>
  </button>,
  <div
    class="g-popover g-zoom-big-appear g-zoom-big-appear-prepare g-zoom-big g-popover-css-var css-var-test-id css-var-test-id g-popover-placement-top"
    style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
  >
    <div
      class="g-popover-arrow"
      style="position: absolute; bottom: 0px; left: 0px;"
    >
      <span
        class="g-popover-arrow-content"
      />
    </div>
    <div
      class="g-popover-container"
      id="test-id"
      role="tooltip"
    >
      <div
        class="g-popover-title"
      >
        Title
      </div>
      <div
        class="g-popover-content"
      >
        <a>
          Close
        </a>
      </div>
    </div>
  </div>,
]
`;

exports[`renders components/popover/demo/control.tsx extend context correctly 2`] = `[]`;

exports[`renders components/popover/demo/hover-with-click.tsx extend context correctly 1`] = `
Array [
  <button
    aria-describedby="test-id"
    class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
    type="button"
  >
    <span>
      Hover and click
    </span>
  </button>,
  <div
    class="g-popover g-zoom-big-appear g-zoom-big-appear-prepare g-zoom-big g-popover-css-var css-var-test-id css-var-test-id g-popover-placement-top"
    style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box; z-index: 1200;"
  >
    <div
      class="g-popover-arrow"
      style="position: absolute; bottom: 0px; left: 0px;"
    >
      <span
        class="g-popover-arrow-content"
      />
    </div>
    <div
      class="g-popover-container"
      id="test-id"
      role="tooltip"
    >
      <div
        class="g-popover-title"
      >
        Click title
      </div>
      <div
        class="g-popover-content"
      >
        <div>
          <div>
            This is click content.
          </div>
          <a>
            Close
          </a>
        </div>
      </div>
    </div>
  </div>,
  <div
    class="g-popover g-zoom-big-appear g-zoom-big-appear-prepare g-zoom-big g-popover-css-var css-var-test-id css-var-test-id g-popover-placement-top"
    style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
  >
    <div
      class="g-popover-arrow"
      style="position: absolute; bottom: 0px; left: 0px;"
    >
      <span
        class="g-popover-arrow-content"
      />
    </div>
    <div
      class="g-popover-container"
      id="test-id"
      role="tooltip"
    >
      <div
        class="g-popover-title"
      >
        Hover title
      </div>
      <div
        class="g-popover-content"
      >
        <div>
          This is hover content.
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`renders components/popover/demo/hover-with-click.tsx extend context correctly 2`] = `[]`;

exports[`renders components/popover/demo/placement.tsx extend context correctly 1`] = `
<div
  class="demo g-flex css-var-test-id g-flex-align-center g-flex-justify-center g-flex-vertical"
>
  <div
    class="g-flex css-var-test-id g-flex-align-center g-flex-justify-center"
    style="white-space: nowrap;"
  >
    <button
      aria-describedby="test-id"
      class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
      style="width: 80px; margin: 4px;"
      type="button"
    >
      <span>
        TL
      </span>
    </button>
    <div
      class="g-popover g-zoom-big-appear g-zoom-big-appear-prepare g-zoom-big g-popover-css-var css-var-test-id css-var-test-id g-popover-placement-topLeft"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
    >
      <div
        class="g-popover-arrow"
        style="position: absolute;"
      >
        <span
          class="g-popover-arrow-content"
        />
      </div>
      <div
        class="g-popover-container"
        id="test-id"
        role="tooltip"
      >
        <div
          class="g-popover-title"
        >
          <span>
            Title
          </span>
        </div>
        <div
          class="g-popover-content"
        >
          <div>
            <p>
              Content
            </p>
            <p>
              Content
            </p>
          </div>
        </div>
      </div>
    </div>
    <button
      aria-describedby="test-id"
      class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
      style="width: 80px; margin: 4px;"
      type="button"
    >
      <span>
        Top
      </span>
    </button>
    <div
      class="g-popover g-zoom-big-appear g-zoom-big-appear-prepare g-zoom-big g-popover-css-var css-var-test-id css-var-test-id g-popover-placement-top"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
    >
      <div
        class="g-popover-arrow"
        style="position: absolute; bottom: 0px; left: 0px;"
      >
        <span
          class="g-popover-arrow-content"
        />
      </div>
      <div
        class="g-popover-container"
        id="test-id"
        role="tooltip"
      >
        <div
          class="g-popover-title"
        >
          <span>
            Title
          </span>
        </div>
        <div
          class="g-popover-content"
        >
          <div>
            <p>
              Content
            </p>
            <p>
              Content
            </p>
          </div>
        </div>
      </div>
    </div>
    <button
      aria-describedby="test-id"
      class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
      style="width: 80px; margin: 4px;"
      type="button"
    >
      <span>
        TR
      </span>
    </button>
    <div
      class="g-popover g-zoom-big-appear g-zoom-big-appear-prepare g-zoom-big g-popover-css-var css-var-test-id css-var-test-id g-popover-placement-topRight"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
    >
      <div
        class="g-popover-arrow"
        style="position: absolute;"
      >
        <span
          class="g-popover-arrow-content"
        />
      </div>
      <div
        class="g-popover-container"
        id="test-id"
        role="tooltip"
      >
        <div
          class="g-popover-title"
        >
          <span>
            Title
          </span>
        </div>
        <div
          class="g-popover-content"
        >
          <div>
            <p>
              Content
            </p>
            <p>
              Content
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="g-flex css-var-test-id g-flex-align-center g-flex-justify-space-between"
    style="width: 432px;"
  >
    <div
      class="g-flex css-var-test-id g-flex-align-center g-flex-vertical"
    >
      <button
        aria-describedby="test-id"
        class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
        style="width: 80px; margin: 4px;"
        type="button"
      >
        <span>
          LT
        </span>
      </button>
      <div
        class="g-popover g-zoom-big-appear g-zoom-big-appear-prepare g-zoom-big g-popover-css-var css-var-test-id css-var-test-id g-popover-placement-leftTop"
        style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
      >
        <div
          class="g-popover-arrow"
          style="position: absolute;"
        >
          <span
            class="g-popover-arrow-content"
          />
        </div>
        <div
          class="g-popover-container"
          id="test-id"
          role="tooltip"
        >
          <div
            class="g-popover-title"
          >
            <span>
              Title
            </span>
          </div>
          <div
            class="g-popover-content"
          >
            <div>
              <p>
                Content
              </p>
              <p>
                Content
              </p>
            </div>
          </div>
        </div>
      </div>
      <button
        aria-describedby="test-id"
        class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
        style="width: 80px; margin: 4px;"
        type="button"
      >
        <span>
          Left
        </span>
      </button>
      <div
        class="g-popover g-zoom-big-appear g-zoom-big-appear-prepare g-zoom-big g-popover-css-var css-var-test-id css-var-test-id g-popover-placement-left"
        style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
      >
        <div
          class="g-popover-arrow"
          style="position: absolute; top: 0px; right: 0px;"
        >
          <span
            class="g-popover-arrow-content"
          />
        </div>
        <div
          class="g-popover-container"
          id="test-id"
          role="tooltip"
        >
          <div
            class="g-popover-title"
          >
            <span>
              Title
            </span>
          </div>
          <div
            class="g-popover-content"
          >
            <div>
              <p>
                Content
              </p>
              <p>
                Content
              </p>
            </div>
          </div>
        </div>
      </div>
      <button
        aria-describedby="test-id"
        class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
        style="width: 80px; margin: 4px;"
        type="button"
      >
        <span>
          LB
        </span>
      </button>
      <div
        class="g-popover g-zoom-big-appear g-zoom-big-appear-prepare g-zoom-big g-popover-css-var css-var-test-id css-var-test-id g-popover-placement-leftBottom"
        style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
      >
        <div
          class="g-popover-arrow"
          style="position: absolute;"
        >
          <span
            class="g-popover-arrow-content"
          />
        </div>
        <div
          class="g-popover-container"
          id="test-id"
          role="tooltip"
        >
          <div
            class="g-popover-title"
          >
            <span>
              Title
            </span>
          </div>
          <div
            class="g-popover-content"
          >
            <div>
              <p>
                Content
              </p>
              <p>
                Content
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="g-flex css-var-test-id g-flex-align-center g-flex-vertical"
    >
      <button
        aria-describedby="test-id"
        class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
        style="width: 80px; margin: 4px;"
        type="button"
      >
        <span>
          RT
        </span>
      </button>
      <div
        class="g-popover g-zoom-big-appear g-zoom-big-appear-prepare g-zoom-big g-popover-css-var css-var-test-id css-var-test-id g-popover-placement-rightTop"
        style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
      >
        <div
          class="g-popover-arrow"
          style="position: absolute;"
        >
          <span
            class="g-popover-arrow-content"
          />
        </div>
        <div
          class="g-popover-container"
          id="test-id"
          role="tooltip"
        >
          <div
            class="g-popover-title"
          >
            <span>
              Title
            </span>
          </div>
          <div
            class="g-popover-content"
          >
            <div>
              <p>
                Content
              </p>
              <p>
                Content
              </p>
            </div>
          </div>
        </div>
      </div>
      <button
        aria-describedby="test-id"
        class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
        style="width: 80px; margin: 4px;"
        type="button"
      >
        <span>
          Right
        </span>
      </button>
      <div
        class="g-popover g-zoom-big-appear g-zoom-big-appear-prepare g-zoom-big g-popover-css-var css-var-test-id css-var-test-id g-popover-placement-right"
        style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
      >
        <div
          class="g-popover-arrow"
          style="position: absolute; top: 0px; left: 0px;"
        >
          <span
            class="g-popover-arrow-content"
          />
        </div>
        <div
          class="g-popover-container"
          id="test-id"
          role="tooltip"
        >
          <div
            class="g-popover-title"
          >
            <span>
              Title
            </span>
          </div>
          <div
            class="g-popover-content"
          >
            <div>
              <p>
                Content
              </p>
              <p>
                Content
              </p>
            </div>
          </div>
        </div>
      </div>
      <button
        aria-describedby="test-id"
        class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
        style="width: 80px; margin: 4px;"
        type="button"
      >
        <span>
          RB
        </span>
      </button>
      <div
        class="g-popover g-zoom-big-appear g-zoom-big-appear-prepare g-zoom-big g-popover-css-var css-var-test-id css-var-test-id g-popover-placement-rightBottom"
        style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
      >
        <div
          class="g-popover-arrow"
          style="position: absolute;"
        >
          <span
            class="g-popover-arrow-content"
          />
        </div>
        <div
          class="g-popover-container"
          id="test-id"
          role="tooltip"
        >
          <div
            class="g-popover-title"
          >
            <span>
              Title
            </span>
          </div>
          <div
            class="g-popover-content"
          >
            <div>
              <p>
                Content
              </p>
              <p>
                Content
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="g-flex css-var-test-id g-flex-align-center g-flex-justify-center"
    style="white-space: nowrap;"
  >
    <button
      aria-describedby="test-id"
      class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
      style="width: 80px; margin: 4px;"
      type="button"
    >
      <span>
        BL
      </span>
    </button>
    <div
      class="g-popover g-zoom-big-appear g-zoom-big-appear-prepare g-zoom-big g-popover-css-var css-var-test-id css-var-test-id g-popover-placement-bottomLeft"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
    >
      <div
        class="g-popover-arrow"
        style="position: absolute;"
      >
        <span
          class="g-popover-arrow-content"
        />
      </div>
      <div
        class="g-popover-container"
        id="test-id"
        role="tooltip"
      >
        <div
          class="g-popover-title"
        >
          <span>
            Title
          </span>
        </div>
        <div
          class="g-popover-content"
        >
          <div>
            <p>
              Content
            </p>
            <p>
              Content
            </p>
          </div>
        </div>
      </div>
    </div>
    <button
      aria-describedby="test-id"
      class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
      style="width: 80px; margin: 4px;"
      type="button"
    >
      <span>
        Bottom
      </span>
    </button>
    <div
      class="g-popover g-zoom-big-appear g-zoom-big-appear-prepare g-zoom-big g-popover-css-var css-var-test-id css-var-test-id g-popover-placement-bottom"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
    >
      <div
        class="g-popover-arrow"
        style="position: absolute; top: 0px; left: 0px;"
      >
        <span
          class="g-popover-arrow-content"
        />
      </div>
      <div
        class="g-popover-container"
        id="test-id"
        role="tooltip"
      >
        <div
          class="g-popover-title"
        >
          <span>
            Title
          </span>
        </div>
        <div
          class="g-popover-content"
        >
          <div>
            <p>
              Content
            </p>
            <p>
              Content
            </p>
          </div>
        </div>
      </div>
    </div>
    <button
      aria-describedby="test-id"
      class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
      style="width: 80px; margin: 4px;"
      type="button"
    >
      <span>
        BR
      </span>
    </button>
    <div
      class="g-popover g-zoom-big-appear g-zoom-big-appear-prepare g-zoom-big g-popover-css-var css-var-test-id css-var-test-id g-popover-placement-bottomRight"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
    >
      <div
        class="g-popover-arrow"
        style="position: absolute;"
      >
        <span
          class="g-popover-arrow-content"
        />
      </div>
      <div
        class="g-popover-container"
        id="test-id"
        role="tooltip"
      >
        <div
          class="g-popover-title"
        >
          <span>
            Title
          </span>
        </div>
        <div
          class="g-popover-content"
        >
          <div>
            <p>
              Content
            </p>
            <p>
              Content
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/popover/demo/placement.tsx extend context correctly 2`] = `[]`;

exports[`renders components/popover/demo/render-panel.tsx extend context correctly 1`] = `
Array [
  <div
    class="g-popover g-popover-pure g-popover-placement-top css-var-test-id"
  >
    <div
      class="g-popover-arrow"
    />
    <div
      class="g-popover-container"
      role="tooltip"
    >
      <div
        class="g-popover-title"
      >
        Title
      </div>
      <div
        class="g-popover-content"
      >
        <div>
          <p>
            Content
          </p>
          <p>
            Content
          </p>
        </div>
      </div>
    </div>
  </div>,
  <div
    class="g-popover g-popover-pure g-popover-placement-bottomLeft css-var-test-id"
    style="width: 250px;"
  >
    <div
      class="g-popover-arrow"
    />
    <div
      class="g-popover-container"
      role="tooltip"
      style="width: 250px;"
    >
      <div
        class="g-popover-title"
      >
        Title
      </div>
      <div
        class="g-popover-content"
      >
        <div>
          <p>
            Content
          </p>
          <p>
            Content
          </p>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`renders components/popover/demo/render-panel.tsx extend context correctly 2`] = `[]`;

exports[`renders components/popover/demo/shift.tsx extend context correctly 1`] = `
<div
  style="width: 300vw; height: 300vh; display: flex; align-items: center; justify-content: center;"
>
  <button
    class="g-btn g-btn-primary g-popover-open"
    type="button"
  >
    <span>
      Scroll The Window
    </span>
  </button>
  <div
    class="g-popover g-zoom-big-appear g-zoom-big-appear-prepare g-zoom-big g-popover-placement-top"
    style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box;"
  >
    <div
      class="g-popover-arrow"
      style="position: absolute; bottom: 0px; left: 0px;"
    />
    <div
      class="g-popover-content"
    >
      <div
        class="g-popover-inner"
        role="tooltip"
      >
        <div
          class="g-popover-inner-content"
        >
          Thanks for using antd. Have a nice day !
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/popover/demo/shift.tsx extend context correctly 2`] = `[]`;

exports[`renders components/popover/demo/style-class.tsx extend context correctly 1`] = `
<div
  class="g-flex css-var-test-id g-flex-gap-medium"
>
  <button
    aria-describedby="test-id"
    class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
    type="button"
  >
    <span>
      Object Style
    </span>
  </button>
  <div
    class="g-popover g-zoom-big-appear g-zoom-big-appear-prepare g-zoom-big g-popover-css-var css-var-test-id css-var-test-id g-popover-placement-top"
    style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
  >
    <div
      class="g-popover-container acss-ven0qr"
      id="test-id"
      role="tooltip"
      style="background: rgb(238, 238, 238); box-shadow: inset 5px 5px 3px #fff, inset -5px -5px 3px #ddd, 0 0 3px rgba(0,0,0,0.2);"
    >
      <div
        class="g-popover-content"
        style="color: rgb(38, 38, 38);"
      >
        Object text
      </div>
    </div>
  </div>
  <button
    aria-describedby="test-id"
    class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid"
    type="button"
  >
    <span>
      Function Style
    </span>
  </button>
  <div
    class="g-popover g-zoom-big-appear g-zoom-big-appear-prepare g-zoom-big g-popover-css-var css-var-test-id css-var-test-id g-popover-placement-top"
    style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
  >
    <div
      class="g-popover-container acss-ven0qr"
      id="test-id"
      role="tooltip"
      style="background-color: rgba(53, 71, 125, 0.8); padding: 12px; border-radius: 4px;"
    >
      <div
        class="g-popover-content"
        style="color: rgb(255, 255, 255);"
      >
        Function text
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/popover/demo/style-class.tsx extend context correctly 2`] = `[]`;

exports[`renders components/popover/demo/triggerType.tsx extend context correctly 1`] = `
<div
  class="g-space g-space-horizontal g-space-align-center g-space-gap-row-small g-space-gap-col-small css-var-test-id"
  style="flex-wrap: wrap;"
>
  <div
    class="g-space-item"
  >
    <button
      aria-describedby="test-id"
      class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
      type="button"
    >
      <span>
        Hover me
      </span>
    </button>
    <div
      class="g-popover g-zoom-big-appear g-zoom-big-appear-prepare g-zoom-big g-popover-css-var css-var-test-id css-var-test-id g-popover-placement-top"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
    >
      <div
        class="g-popover-arrow"
        style="position: absolute; bottom: 0px; left: 0px;"
      >
        <span
          class="g-popover-arrow-content"
        />
      </div>
      <div
        class="g-popover-container"
        id="test-id"
        role="tooltip"
      >
        <div
          class="g-popover-title"
        >
          Title
        </div>
        <div
          class="g-popover-content"
        >
          <div>
            <p>
              Content
            </p>
            <p>
              Content
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="g-space-item"
  >
    <button
      aria-describedby="test-id"
      class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
      type="button"
    >
      <span>
        Focus me
      </span>
    </button>
    <div
      class="g-popover g-zoom-big-appear g-zoom-big-appear-prepare g-zoom-big g-popover-css-var css-var-test-id css-var-test-id g-popover-placement-top"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
    >
      <div
        class="g-popover-arrow"
        style="position: absolute; bottom: 0px; left: 0px;"
      >
        <span
          class="g-popover-arrow-content"
        />
      </div>
      <div
        class="g-popover-container"
        id="test-id"
        role="tooltip"
      >
        <div
          class="g-popover-title"
        >
          Title
        </div>
        <div
          class="g-popover-content"
        >
          <div>
            <p>
              Content
            </p>
            <p>
              Content
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="g-space-item"
  >
    <button
      aria-describedby="test-id"
      class="g-btn css-var-test-id g-btn-default g-btn-color-default g-btn-varig-outlined"
      type="button"
    >
      <span>
        Click me
      </span>
    </button>
    <div
      class="g-popover g-zoom-big-appear g-zoom-big-appear-prepare g-zoom-big g-popover-css-var css-var-test-id css-var-test-id g-popover-placement-top"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
    >
      <div
        class="g-popover-arrow"
        style="position: absolute; bottom: 0px; left: 0px;"
      >
        <span
          class="g-popover-arrow-content"
        />
      </div>
      <div
        class="g-popover-container"
        id="test-id"
        role="tooltip"
      >
        <div
          class="g-popover-title"
        >
          Title
        </div>
        <div
          class="g-popover-content"
        >
          <div>
            <p>
              Content
            </p>
            <p>
              Content
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/popover/demo/triggerType.tsx extend context correctly 2`] = `[]`;

exports[`renders components/popover/demo/wireframe.tsx extend context correctly 1`] = `
Array [
  <div
    class="g-popover g-popover-pure g-popover-placement-top css-var-test-id"
  >
    <div
      class="g-popover-arrow"
    />
    <div
      class="g-popover-container"
      role="tooltip"
    >
      <div
        class="g-popover-title"
      >
        Title
      </div>
      <div
        class="g-popover-content"
      >
        <div>
          <p>
            Content
          </p>
          <p>
            Content
          </p>
        </div>
      </div>
    </div>
  </div>,
  <div
    class="g-popover g-popover-pure g-popover-placement-bottomLeft css-var-test-id"
    style="width: 250px;"
  >
    <div
      class="g-popover-arrow"
    />
    <div
      class="g-popover-container"
      role="tooltip"
      style="width: 250px;"
    >
      <div
        class="g-popover-title"
      >
        Title
      </div>
      <div
        class="g-popover-content"
      >
        <div>
          <p>
            Content
          </p>
          <p>
            Content
          </p>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`renders components/popover/demo/wireframe.tsx extend context correctly 2`] = `[]`;
